--- a/20170826-cabins/components/sass/_st_override.scss
+++ b/20170826-cabins/components/sass/_st_override.scss
@@ -27,7 +27,8 @@ body {
 }
 
 .tooltip {
-    max-width:150px;
+    max-width:190px;
+    line-height:140%;
 }
 
 .districtName {
@@ -55,18 +56,19 @@ body {
 }
 
 .cell {
-    width:32%;
+    width:24%;
     display:inline-block;
 }
 
 #countyList {
-    height:300px;
+    height:295px;
     overflow-y:auto;
     overflow-x:auto;
+    font-size:0.8em;
 }
 
 .tableHead {
-    width:32%;
+    width:24%;
     font-weight: 900;
     display:inline-block;
     height:20px;
@@ -74,8 +76,8 @@ body {
 
 .tableCell {
     display: inline-block;
-    width: 32%;
-    height:20px;
+    width: 24%;
+    height:15px;
     font-family: "Benton Sans";
     vertical-align: middle;
     padding-top:2.7px;
@@ -97,6 +99,10 @@ body {
 .pct {
     text-align:center;
     font-weight:900;
+}
+
+.county {
+    white-space: nowrap;
 }
 
 #countyList .pct {
