--- a/20170830-school_flight/components/css/style.css
+++ b/20170830-school_flight/components/css/style.css
@@ -2225,6 +2225,10 @@ p {
   display: inline-block;
 }
 
+.left {
+  margin-right: 3.5%;
+}
+
 .geocoder, .mapboxgl-ctrl-geocoder {
   width: 100%;
   margin-bottom: 10px;
