--- a/20170830-school_flight/components/sass/_st_override.scss
+++ b/20170830-school_flight/components/sass/_st_override.scss
@@ -54,6 +54,10 @@ p {
     display:inline-block;
 }
 
+.left {
+    margin-right: 3.5%;
+}
+
 .geocoder, .mapboxgl-ctrl-geocoder {
     width:100%;
     margin-bottom:10px;
