--- a/20171231-land/styles/_project.scss
+++ b/20171231-land/styles/_project.scss
@@ -1599,7 +1599,7 @@ text {
 
 #state-borders {
   fill: none;
-  stroke: #fff;
+  stroke: #000000;
   stroke-width: 2px;
   stroke-linejoin: round;
   stroke-linecap: round;
