--- a/20180118-vikings_bars/styles/_project.scss
+++ b/20180118-vikings_bars/styles/_project.scss
@@ -52,7 +52,9 @@
 #listing {
 	overflow-x:hidden;
 	overflow-y:auto;
-	max-height:300px;
+	max-height:360px;
+  height:360px;
+  display:none;
 }
 
 .vikings {
@@ -113,7 +115,7 @@ footer {
 }
 
 .col {
-  width:32%;
+  width:24%;
   display:inline-block;
   vertical-align:top;
 }
@@ -134,13 +136,15 @@ footer {
 
 #infobox {
     font-family: "Benton Sans Condensed Medium", Helvetica, Arial, sans-serif;
+    margin:10px;
+    padding:10px;
     top:1px;
     left:3px;
     color: black;
     font-size: 1.2em;
     position: absolute;
     z-index: 2;
-    background-color:rgba(80,80,80,0.08);
+    background-color:rgba(80,80,80,0.15);
     width:200px;
 }
 
@@ -198,19 +202,43 @@ input {
     padding: 9px;
 }
 
+  *, *:after, *:before { box-sizing:border-box; margin:0; moz-box-sizing:border-box; padding:0; webkit-box-sizing:border-box; } 
+  ::-moz-selection { background:transparent; }
+  .wrapper-demo { font-weight:400; zoom:1; z-index:999; display:inline-block; width:100%; }
+  .wrapper-demo:after { clear:both; content:""; display:table; }
+  .wrapper-dropdown-1 { display:inline-block;z-index:900;background:#ddd;color:#333;cursor:pointer;font-weight:bold;outline:none;padding:8px;position:relative;width:200px;border:1px solid #aaa;box-shadow:0 2px 1px rgba(0, 0, 0, 0.10);font-size:14px; width:100%; }
+  .wrapper-dropdown-1:after { border-color:transparent #333; border-style:solid; border-width:6px 0 6px 6px; content:""; height:0; margin-top:-6px; position:absolute; right:16px; top:50%; width:0; }
+  .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important;  }
+  .wrapper-dropdown-1 .dropdown li a { color:#9e9e9e; display:block; padding:10px 20px; text-decoration:none; }
+  .wrapper-dropdown-1 .dropdown li:hover a { background:#ddd; }
+  .wrapper-dropdown-1 .dropdown { font-weight:normal;left:0;list-style:none;opacity:0;pointer-events:none;position:absolute;right:0;top:100%;border:1px solid #aaa;background:#fff;box-shadow:0 4px 5px rgba(0, 0, 0, 0.15);margin-top:0px !important; }
+  .wrapper-dropdown-1 .dropdown li:hover a { background:#EFEFEF; }
+  .wrapper-dropdown-1.active .dropdown { opacity:1; pointer-events:auto; }
+  .wrapper-dropdown-1.active:after { border-color:#333 transparent; border-width:6px 6px 0 6px; margin-top:-3px; }
+  ul.dropdown.months { box-sizing:border-box;margin:0;moz-box-sizing:border-box;padding:0;webkit-box-sizing:border-box;margin-top:-1px;border-radius:0 0 4px 4px;background-clip:padding-box; }
+  .no-opacity .wrapper-dropdown-1 .dropdown,
+  .no-pointerevents .wrapper-dropdown-1 .dropdown { display:none; opacity:1; pointer-events:auto; }
+  .no-opacity .wrapper-dropdown-1.active .dropdown,
+  .no-pointerevents .wrapper-dropdown-1.active .dropdown { display:block; }
+  header[role="banner"] { width:100%;height:40px;z-index:1000;background:#f0f0f0; }
+
+  .wrapper-dropdown-1 {
+       background-color: #dddddd;
+    }
+
 @media (max-width:800px) {
     #wrapper {
         width:100%;
     }
     .mappage {
         display:block;
-    	width:100% !important;
+    	  width:100% !important;
      }
      #left {
     	 height:200px;
      }
      #map {
-     	 height:250px;
+     	 height:360px;
      }
 }
 
