--- a/20180118-vikings_bars/styles/_project.scss
+++ b/20180118-vikings_bars/styles/_project.scss
@@ -100,6 +100,10 @@ footer {
     stroke-width: 6px !important;
 }
 
+.hideme {
+  display:none !important;
+}
+
 .legendary {
     padding:4px;
     color: #fff;
