--- a/20180218-dui/styles/_project.scss
+++ b/20180218-dui/styles/_project.scss
@@ -16,6 +16,10 @@
     opacity:0 !important;
 }
 
+.powerline line {
+  opacity:0.3 !important;
+}
+
 #chartTrend .c3-area {
   opacity: 1 !important;
 }
